--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -1,5 +1,13 @@
 .chat {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
     background-color: rgb(248, 248, 248);
+}
+
+.userBar {
+    padding: 15px;
+    border-bottom: 1px solid rgb(221, 221, 221);
 }
